<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16"
    tools:context=".Activity.AActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_a"
        android:textSize="@dimen/sp_26"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_ab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/gt_b"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_act_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_ab"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/rotate_act"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_cmr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_act_rotate"
        android:layout_centerHorizontal="true"
        android:text="@string/cmr"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_str_b_for_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_act_rotate"
        android:layout_centerHorizontal="true"
        android:text="@string/str_b_for_result"
        android:textAllCaps="false" />

    <FrameLayout
        android:id="@+id/cdn_layout"
        android:layout_width="500dp"
        android:layout_height="@dimen/dp_200"
        android:layout_below="@+id/txt">

        <VideoView
            android:layout_gravity="center"
            android:id="@+id/video_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</RelativeLayout>